# Bella-Tavola

./: .dockerignore  .gitignore  CONSOLIDACAO.md  EX_13_1_SETUP.md  EX_13_1_URLS.txt  GITHUB_ACTIONS_FIX.md  PROGRESS.md  README.md  RESUMO_FINAL.md  SETUP.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  validate_ex13_setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
Apresentações/: apresentacao_caderno_docker_p01.md  apresentacao_caderno_docker_p02.md  apresentacao_caderno_docker_p03.md
Cadernos/: cdia_cd2_2026_e02_fastapi.py  cdia_cd2_2026_e03_dados_sintéticos.py  cdia_cd2_2026_e04_p01_github_actions.py  cdia_cd2_2026_e04_p02_github_actions.py  cdia_cd2_2026_e04_p03_github_actions.py  cdia_cd2_2026_e05_p01_docker.py  cdia_cd2_2026_e05_p02_docker.py  cdia_cd2_2026_e05_p03_docker.py
ml/: data_utils.py  model_utils.py  train.py
src/: config.py  main.py
src/models/: bebida.py  pedido.py  prato.py  reserva.py
src/routers/: bebidas.py  pedidos.py  pratos.py  reservas.py
tests/: conftest.py  test_contratos.py  test_integracao.py  test_saude.py
