[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bella-tavola-api"
version = "1.0.0"
description = "API robusta para gerenciamento de restaurante italiano"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Bella Tavola Team"}
]
keywords = ["fastapi", "restaurant", "api", "mlops", "cicd"]

[project.urls]
Homepage = "https://github.com/j3ffsilva/bella-tavola-api"
Repository = "https://github.com/j3ffsilva/bella-tavola-api.git"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
markers = [
    "smoke: quick sanity tests",
    "integracao: integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
